objetivo+akeru github

--- a/intermedia/relatorio/relatorio_intermedio.tex
+++ b/intermedia/relatorio/relatorio_intermedio.tex
@@ -18,7 +18,15 @@
     pdfborder = {0 0 0}
 }
 \pagenumbering{arabic}
+
 \section{Objectivo}
+
+O objectivo do projecto é o desenvolvimento de um sistema de monitorização de temperatura. 
+
+O sistema, deverá ser baseado num sensor de temperatura associado a um dispositivo \textit{arduino (akeru 3.3)}, que irá comunicar as suas medições a um servidor \textit{Sigfox}, armazenando-as na \textit{cloud}.
+
+Na óptica do utilizador, irá ser desenvolvida uma aplicação em ambiente \textit{android}, que fornecerá os dados presentes na \textit{cloud} com uma apresentação \textit{user friendly}. Pretende-se ainda que seja possível que o utilizador registe um novo dispositivo a monitorizar na aplicação, bem como definir alarmes para certos valores de temperatura.
+
 \section{Arquitectura do projecto}
 \section{Trabalho realizado}
 \section{Considerações finais}
