--- a/intermedia/relatorio/rosto.tex
+++ b/intermedia/relatorio/rosto.tex
@@ -6,7 +6,7 @@
 
 		\textsc{\LARGE Redes Móveis e Sem Fios}\\[1.5cm]
 
-		\textsc{\Large Relatório do projecto}\\[1.5cm]
+		\textsc{\Large Relatório intermédio}\\[1.5cm]
 
 
 		
