--- a/intermedia/relatorio/relatorio_intermedio.tex
+++ b/intermedia/relatorio/relatorio_intermedio.tex
@@ -49,7 +49,7 @@ A aplicação \textit{Android}, com a qual o utilizador irá ter contacto direct
 \item \textit{Welcome Screen};
 \item \textit{New First User};
 \item \textit{Logs};
-\item \textit{Set Alarm};
+\item \textit{New Alarm};
 \item \textit{Add Device}.
 \end{itemize}
 
@@ -66,31 +66,26 @@ As relações entre as actividades descritas, encontram-se representadas na figu
   \label{fig:app_android_geral}
 \end{figure}
 
-A actividade \textit{Welcome Screen} terá como objectivo averiguar a existência de um utilizador na aplicação. No caso de existir um utilizador registado, a aplicação deverá prosseguir para a actividade de visualização das mensagens do dispositivo (\textit{Logs}). Caso contrário, o utilizador deverá proceder ao seu registo, bem como ao registo do \textit{device} que pretende monitorizar.
+A actividade \textit{Welcome Screen} terá apenas o intuito de iniciar a aplicação, de forma mais \textit{user friendly}, garantindo que a actividade inicial não tenha logo um conjunto elevado de informação. Após esta actividade será lançada a \textit{Logs}, que irá averiguar a existência de um utilizador na aplicação. No caso de não existir registo, o utilizador deverá realizá-lo, bem como o registo do \textit{device} que pretende monitorizar.
 
 A averiguação do \textit{login} de um utilizador será feita mediante a existência de um ficheiro armazenado na aplicação.
 
-\begin{figure}[hb]
-  \centering
-  \includegraphics[scale=0.40]{WelcomeScreen.png}
-  \caption{Arquitectura da actividade \textit{Welcome Screen}}
-  \label{fig:app_welcome}
-\end{figure}
+A actividade de registo de um primeiro utilizador (\textit{New First User}), terá apenas três campos de inserção de texto: \textit{user name, password} e \textit{devicetype-id}. Estes parâmetros deverão ser gravados no ficheiro de texto descrito anteriormente. De seguida, a aplicação irá retornar à actividade \textit{Logs}.
 
-A actividade de registo de um primeiro utilizador (\textit{New First User}), terá apenas três campos de inserção de texto: \textit{user name, password} e \textit{devicetype-id}. Estes parâmetros deverão ser gravados no ficheiro de texto descrito anteriormente. De seguida, será lançada a actividade de \textit{Logs}.
+A actividade de visualização da informação da \textit{Cloud} (\textit{Logs}), irá ser constituída por duas \textit{threads}. A primeira consiste na obtenção das mensagens do dispositivo por pedidos HTTPS (GET), de acordo com a informação de registo do utilizador, que irão ser realizados periodicamente. Posteriormente a resposta será enviada para a \textit{thread} principal (da API) que a disponibiliza ao utilizador. O esquema desta actividade está descrito na figura \autoref{fig:app_logs}.
 
-A actividade de visualização da informação da \textit{Cloud}, que poderá ser acedida a partir das outras duas actividades descritas anteriormente, irá ser constituída por duas \textit{threads}. A primeira consiste na obtenção das mensagens do dispositivo por pedidos HTTPS (GET) que irão ser realizados periodicamente. Posteriormente a resposta será enviada para a \textit{thread} principal (da API) que a disponibiliza ao utilizador.
+Esta actividade irá ainda ter a opção de registar um novo dispositivo para monitorização, bem como adicionar um novo alarme de temperatura. No caso de o \textit{threshold} de temperatura ser ultrapassado, a \textit{thread} que realiza o \textit{parsing} da informação deverá lançar uma notificação ao utilizador.
 
-\begin{figure}[hb]
+À semelhança da actividade \textit{New First User}, as actividades \textit{Add Device} e \textit{Set Alarm} serão apenas compostas por campos de texto. Após o registo num ficheiro das informações recolhidas, estas irão retornar no \textit{stack}, voltando à actividade anterior.
+
+No caso de o utilizador pretender fazer \textit{logout}, o seu ficheiro de registo é eliminado do sistema de armazenamento interno, sendo lançada a actividade \textit{New First User}, por forma a que seja efectuado um novo registo. Neste caso, perdem-se também todos os alarmes gravados pelo utilizador.
+
+\begin{figure}[H]
   \centering
   \includegraphics[scale=0.40]{ShowLogs.png}
   \caption{Arquitectura da actividade \textit{Logs}}
   \label{fig:app_logs}
 \end{figure}
-
-Esta actividade irá ainda ter a opção de registar um novo dispositivo para monitorização, bem como adicionar um novo alarme de temperatura. No caso de o \textit{threshold} de temperatura ser ultrapassado, a \textit{thread} que realiza o \textit{parsing} da informação deverá lançar uma notificação ao utilizador.
-
-À semelhança da actividade \textit{New First User}, as actividades \textit{Add Device} e \textit{Set Alarm} serão apenas compostas por campos de texto. Após o registo num ficheiro das informações recolhidas, estas irão retornar no \textit{stack}, voltando à actividade anterior.
 
 \subsection*{Servidor \textit{SigFox}}
 
@@ -121,6 +116,54 @@ Para a implementação do sensor de temperatura, recorrer-se-á às bibliotecas 
 
 \section*{Trabalho realizado}
 
+Do planeamento atrás referido, foi já adiantado parte do trabalho referente à programação da aplicação, nomeadamente as actividades \textit{Welcome Screen, New First User, Set Alarm e Add Device}. De seguida são apresentadas algumas capturas de ecrã destas actividades em versão \textit{beta}.
+
+\begin{figure}[H]
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{welcome.png}
+  \caption{Welcome Screen}\label{fig:welcome}
+\endminipage\hfill
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{newUser.png}
+  \caption{Registo de um novo utilizador}\label{fig:newUser}
+\endminipage\hfill
+\minipage{0.32\textwidth}%
+  \includegraphics[width=\linewidth]{AddDevice.png}
+  \caption{Registo de um novo dispositivo}\label{fig:newdev}
+\endminipage
+\end{figure}
+
+\begin{figure}[H]
+\minipage{0.29\textwidth}
+  \includegraphics[width=\linewidth]{newalarm.png}
+  \caption{Registo de um novo alarme}\label{fig:newalarm}
+\endminipage\hfill
+\minipage{0.29\textwidth}
+  \includegraphics[width=\linewidth]{logs.png}
+  \caption{Actividade \textit{Logs}}\label{fig:logs}
+\endminipage\hfill
+\minipage{0.29\textwidth}%
+  \includegraphics[width=\linewidth]{login.png}
+  \caption{Actividade \textit{Logs} com \textit{login}}\label{fig:login}
+\endminipage
+\end{figure}
+
+Relativamente à obtenção das leituras do sensor de arduíno a partir da \textit{cloud Sigfox}, foi realizado um programa à parte por forma a testar apenas esta funcionalidade, tal como representado nas figuras abaixo. O programa, além de recolher os dados, realiza o \textit{parse} do \textit{JSON}.
+
+\begin{figure}[H]
+\minipage{0.40\textwidth}
+  \includegraphics[width=\linewidth]{get.jpg}
+  \caption{Botão para obtenção da informação da \textit{cloud}}\label{fig:get}
+\endminipage\hfill
+\minipage{0.40\textwidth}
+  \includegraphics[width=\linewidth]{json.jpg}
+  \caption{Recolha da informação com \textit{parse}}\label{fig:json}
+\endminipage\hfill
+\end{figure}
+
+Será agora necessária a interligação dos dois programas e a activação das notificações, por forma a que a aplicação fique concluída.
+
+Relativamente ao sensor, foi apenas realizado o trabalho de pesquisa, sendo iniciada a implementação quando a aplicação estiver concluída.
 
 \begin{thebibliography}{9}
 
