--- a/intermedia/relatorio/rosto.tex
+++ b/intermedia/relatorio/rosto.tex
@@ -6,7 +6,12 @@
 
 		\textsc{\LARGE Redes Móveis e Sem Fios}\\[1.5cm]
 
-		\textsc{\Large Relatório intermédio}\\[1.5cm]
+		\textsc{\Large Relatório intermédio  }\\[1.5cm]
+		
+		
+		\textsc{Development of Internet of Things sensor monitoring based on SigFox, Arduino and Android }\\[1.5cm]
+		
+
 
 
 		
