alteracao do corpo do relatorio

--- a/relatorio/relatorio_intermedio.tex
+++ b/relatorio/relatorio_intermedio.tex
@@ -17,9 +17,13 @@
 \hypersetup{%
     pdfborder = {0 0 0}
 }
-\pagenumbering{arabic}
 
-\section*{Objectivo}
+\tableofcontents
+\pagenumbering{gobble}
+\pagebreak
+
+\pagenumbering{arabic}
+\section{Objectivo}
 
 O objectivo do projecto é o desenvolvimento de um sistema de monitorização de temperatura. 
 
@@ -27,7 +31,10 @@ O sistema, deverá ser baseado num sensor de temperatura associado a um disposit
 
 Na óptica do utilizador, irá ser desenvolvida uma aplicação em ambiente \textit{android}, que fornecerá os dados presentes na \textit{cloud} com uma apresentação \textit{user friendly}. Pretende-se ainda que seja possível que o utilizador registe um novo dispositivo a monitorizar na aplicação, bem como definir alarmes para certos valores de temperatura.
 
-\section*{Solução proposta}
+
+
+
+\section{Solução encontrada}
 
 Tal como referido na secção anterior, a monitorização da temperatura e da qualidade de medição do sensor, irá ser feita pelo utilizador com recurso à aplicação, mas tendo a \textit{cloud SigFox} como intermediária.
 
@@ -41,7 +48,7 @@ A arquitectura será então a apresentada na figura \ref{fig:general}:
   \label{fig:general}
 \end{figure}
 
-\subsection*{Aplicação \textit{Android}}
+\subsection{Aplicação \textit{Android}}
 
 A aplicação \textit{Android}, com a qual o utilizador irá ter contacto directo, será constituída por cinco actividades:
 
@@ -87,17 +94,17 @@ No caso de o utilizador pretender fazer \textit{logout}, o seu ficheiro de regis
   \label{fig:app_logs}
 \end{figure}
 
-\subsection*{Servidor \textit{SigFox}}
+\subsection{Servidor \textit{SigFox}}
 
 O papel deste servidor será o armazenamento da informação medida pelo sensor e a recepção de pedidos por parte da aplicação \textit{android}. Consoante o tipo de pedido, irá realizar uma resposta em \textit{JSON} com as informações das medições.
 
 Em termos de implementação para o projecto, foi apenas necessário conhecer a forma como os pedidos devem ser realizados bem como o formato de resposta.
 
-\subsection*{Sensor Arduino}
+\subsection{Sensor Arduino}
 
 O sensor deverá realizar medições periodicamente enviando-as para a \textit{cloud SigFox}, via rádio.
 
-\section*{Detalhes técnicos}
+\section{Detalhes técnicos}
 
 Para a implementação da solução descrita anteriormente, para os diferentes módulos recorreu-se às seguintes tecnologias:
 
@@ -114,7 +121,7 @@ Ao receber a resposta, a \textit{thread} deverá ser processada com \textit{pars
 
 Para a implementação do sensor de temperatura, recorrer-se-á às bibliotecas associadas ao dispositivo \textit{Akeru 3.3} disponibilizadas pelo \textit{Snootlab}.
 
-\section*{Trabalho realizado}
+\section{Verificações da solução encontrada}
 
 Do planeamento atrás referido, foi já adiantado parte do trabalho referente à programação da aplicação, nomeadamente as actividades \textit{Welcome Screen, New First User, Set Alarm e Add Device}. De seguida são apresentadas algumas capturas de ecrã destas actividades em versão \textit{beta}.
 
@@ -164,6 +171,13 @@ Relativamente à obtenção das leituras do sensor de arduíno a partir da \text
 Será agora necessária a interligação dos dois programas e a activação das notificações, por forma a que a aplicação fique terminada.
 
 Relativamente ao sensor, foi apenas realizado o trabalho de pesquisa, sendo iniciada a implementação quando a aplicação estiver concluída.
+
+\section{Alterações face ao planeamento inicial}
+
+
+
+\section{Pontos críticos}
+
 
 \begin{thebibliography}{9}
 
